# XAIstories

./: .gitignore  README.md  SHAPstories_Example.ipynb  example_prompts_and_stories.txt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
assets/: Modelfile
notebooks/: SHAPstories_Example.ipynb  story_evaluation.ipynb  story_generation.ipynb
shapStories/: __init__.py  llm_wrappers.py  stories.py
src/stories/: __init__.py  explainers.py  llm_wrappers.py  metrics.py  prompts.py  stories.py  utils.py
tests/: test_metrics.py  test_shap_stories.py
