[build-system]
requires = [
  "setuptools>=64",
  "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "shapstories"
version = "0.1.0"
description = "Narrative-driven XAI: generate SHAP-based stories with LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "ADMAntwerp" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pandas>=2,<3"
  "numpy>=2,<3",
  "shap>=0,<1",
  "openai>=0,<1",
  "scikit-learn>=1,<2",
  "replicate>=1,<2",
  "matplotlib>=3,<4",
  "pillow>=11,<12",
  "google-genai>=1,<2"
]

[project.optional-dependencies]
hf = [
  "transformers"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["shapStories*"]

[project.urls]
Homepage = "https://arxiv.org/abs/2309.17057"
Repository = "https://github.com/ADMAntwerp/xaistories2"
